express/styles/styles.css
/* default content */

@font-face {
  font-family: 'Trebuchet MS';
  size-adjust: 90%;
  src: local('Trebuchet MS'),
    local('TrebuchetMS');
}

:root {
  --color-white: #FFF;
  --color-gray-100: #F8F8F8;
  --color-gray-150: #F3F3F3;
  --color-gray-200: #E8E8E8;
  --color-gray-300: #D4D4D4;
  --color-gray-400: #B6B6B6;
  --color-gray-500: #909090;
  --color-gray-600: #686868;
  --color-gray-700: #444;
  --color-gray-800: #242424;
  --color-black: #000;
  --color-brand-title: #000B1D;
  --color-info-accent: #5C5CE0;
  --color-info-accent-hover: #4646C6;
  --color-info-accent-down: #3D3DB4;
  --color-info-accent-reverse: #eeeefc;
  --color-info-accent-reverse-down: #e6e6f4;
  --color-info-accent-light: #DEDEF9;
  --color-info-primary: #242424;
  --color-info-primary-hover: #090909;
  --color-info-primary-down: #000;
  --color-info-secondary: #E8E8E8;
  --color-info-secondary-hover: #d4d4d4;
  --color-info-secondary-down: #cdcdcd;
  --color-premium: #EBCF2D;
  --gradient-highlight-vertical: linear-gradient(15deg, #7c84fc, #ff4dd2);
  --gradient-highlight-horizontal: linear-gradient(90deg, #ff4dd2, #7c84fc);
  --gradient-highlight-diagonal: linear-gradient(45deg, #7c84fc, #ff4dd2);

  /* header */
  --header-height: 65px;
  --breadcrumbs-height: 43px;
  --brand-header-height: 79px;

  /* body */
  --body-background-color: var(--color-white);
  --body-alt-background-color: var(--color-gray-200);
  --body-font-family: 'adobe-clean', 'Adobe Clean', 'Trebuchet MS', sans-serif;
  --body-serif-font-family: 'adobe-clean-serif', 'Adobe Clean Serif', serif;
  --body-font-weight: normal;
  --body-color: var(--color-gray-800);
  --body-line-height: 1.5;
  --body-font-size-xxl: 1.5rem;
  /* 24px */
  --body-font-size-xl: 1.25rem;
  /* 20px */
  --body-font-size-l: 1.125rem;
  /* 18px */
  --body-font-size-m: 1rem;
  /* 16px */
  --body-font-size-s: 0.875rem;
  /* 14px */
  --body-font-size-xs: 0.75rem;
  /* 12px */
  /* headings */
  --heading-font-weight: 800;
  --heading-color: var(--color-gray-800);
  --heading-line-height: 1.25;
  --heading-font-size-xxxl: 5rem;
  /* 80px */
  --heading-font-size-xxl: 3.75rem;
  /* 60px */
  --heading-font-size-xl: 2.8125rem;
  /* 45px */
  --heading-font-size-l: 2.25rem;
  /* 36px */
  --heading-font-size-m: 1.75rem;
  /* 28px */
  --heading-font-size-s: 1.375rem;
  /* 22px */
}

@media (min-width: 900px) {
  :root {
    --heading-font-size-xxxl: 3.75rem;
    /* 60px */
  }
}

@media (min-width: 1200px) {
  :root {
    --heading-font-size-xxxl: 2.8125rem;
    /* 45px */
  }
}

body {
  background-color: var(--body-background-color);
  font-family: var(--body-font-family);
  font-size: var(--body-font-size-m);
  color: var(--body-color);
  margin: 0;
  padding: 0;
}

body[data-device="mobile"] {
  h1, h2 {
    hyphens: none;
    overflow-wrap: break-word; 
    word-wrap: break-word;     
  }
}

body.no-scroll {
  overflow-y: hidden;
  touch-action: none;
}

/* gnav */
body > header {
  box-sizing: content-box;
  padding-bottom: 0;
  background-repeat: no-repeat;
  background-size: auto 32px;
  background-position: bottom 24px center;
  position: relative;
  background-color: #FFF;
}

.feds-topnav-spacing,
body > header:not(.feds-header-wrapper){
  height: var(--header-height);
}

body>footer[data-status='loading']{
  visibility:hidden;
}

header #feds-topnav a.feds-navLink.feds-navLink--primaryCta {
  background-color: var(--color-info-accent);
  border-color: var(--color-info-accent);
}

header #feds-topnav a.feds-navLink.feds-navLink--primaryCta:hover {
  background-color: var(--color-info-accent-hover) !important;
  border-color: var(--color-info-accent-hover) !important;
}

header #feds-topnav a.feds-navLink.feds-navLink--primaryCta:focus {
  background-color: var(--color-info-accent-hover) !important;
  border-color: var(--color-info-accent-hover) !important;
  outline: none;
  box-shadow:
          0 0 0 2px var(--color-white),
          0 0 0 4px var(--color-info-accent-hover);
}

header #feds-header a.feds-navLink:hover .feds-navLink-text {
  color: var(--color-info-accent-hover);
}

footer {
  margin-top: 0;
}

/* buttons */

a.button:any-link {
  text-decoration: none;
  border-radius: 18px;
  padding: 5px 1.2em 6px 1.2em;
  text-align: center;
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: 600;
  line-height: var(--body-line-height);
  cursor: pointer;
  transition: background-color .3s, color .3s, border .3s;
  border-width: 2px;
  border-style: solid;
  margin: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;

}

a.button.xlarge:any-link {
  padding: 13px 1.5em 14px 1.5em;
  border-radius: 27px;
  font-size: var(--body-font-size-m);
}

a.button.large:any-link {
  padding: 10px 1.5em 10px 1.5em;
  border-radius: 22px;
}

a.button.small:any-link {
  padding: 4px 1em 4px 1em;
  border-radius: 15px;
  font-size: var(--body-font-size-xs);
}

a.button:any-link,
a.button.accent:any-link,
a.button.primaryCTA:any-link {
  color: var(--color-white);
  background-color: var(--color-info-accent);
  border-color: var(--color-info-accent);
}

a.button:any-link:hover,
a.button.accent:any-link:hover,
a.button.primaryCTA:any-link:hover {
  background-color: var(--color-info-accent-hover);
  border-color: var(--color-info-accent-hover);
}

a.button:any-link:active,
a.button.accent:any-link:active,
a.button.primaryCTA:any-link:active {
  background-color: var(--color-info-accent-down);
  border-color: var(--color-info-accent-down);
}

a.button:focus,
a.button.accent:focus,
a.button.primaryCTA:focus {
  background-color: var(--color-info-accent-hover);
  border-color: var(--color-info-accent-hover);
  color: var(--color-white);
  outline: none;
  box-shadow:
    0 0 0 2px var(--color-white),
    0 0 0 4px var(--color-info-accent-hover);
}

a.button.primary:any-link {
  color: var(--color-white);
  background-color: var(--color-info-primary);
  border-color: var(--color-info-primary);
}
/* ... */

